# HPC-and-SLURM

./: Dockerfile.j  Dockerfile.m  Dockerfile.n  README.md  build_images.sh  docker-compose.yaml
files/: CMakeLists.txt  job.sh  test.py
files/src/: hybrid_docking.cpp
